@@ -133,6 +133,7 @@ production.
 * (bug 48294) API: Fix chunk upload async mode.
 * (bug 46749) Broken files tracking category removed from pages if an image
   with that name is uploaded.
+* CSSJanus no longer breaks on rgb[a](...) and hsl[a](...) CSS3 color syntaxes.
 
 === API changes in 1.22 ===
 * (bug 46626) xmldoublequote parameter was removed. Because of a bug, the
